--- a/Lecture001-데이터 모으기.ipynb
+++ b/Lecture001-데이터 모으기.ipynb
@@ -8,7 +8,8 @@
     "\n",
     "# Lecture 001. 데이터 모으기\n",
     "\n",
-    "<div align='right'>이  인  구 (Ike Lee)</div>  \n",
+    "\n",
+    "                                                                                      이 해 영 (Haeyoung Lee)\n",
     "\n",
     "<img src='https://blog.sknetworks.co.kr/wp-content/uploads/2017/11/39371743_ml.jpg' width=40%>\n",
     "\n",
@@ -66,25 +67,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SystemExit",
-     "evalue": "camera error",
-     "output_type": "error",
-     "traceback": [
-      "An exception has occurred, use %tb to see the full traceback.\n",
-      "\u001b[0;31mSystemExit\u001b[0m\u001b[0;31m:\u001b[0m camera error\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/intel/test/test2/lib/python3.6/site-packages/IPython/core/interactiveshell.py:3351: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
-      "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "cap = cv2.VideoCapture(0)\n",
     "if not cap.isOpened(): sys.exit('camera error')\n",
@@ -105,9 +88,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "box\n"
+     ]
+    }
+   ],
    "source": [
     "i = input()\n",
     "if not os.path.exists(\"/home/intel/test/data/VOC4IC/\" + i):\n",
