--- a/Lecture004-실시간추론하기.ipynb
+++ b/Lecture004-실시간추론하기.ipynb
@@ -75,7 +75,11 @@
     "# Plugin initialization for specified device and load extensions library if specified.\n",
     "plugin_dir = None\n",
     "model_xml = './bin/mobilenetv2.xml'\n",
-    "model_bin = './bin/mobilenetv2.bin'"
+    "model_bin = './bin/mobilenetv2.bin'\n",
+    "\n",
+    "# mobilenet 20가지 사물로 training 한 원본 모델을 불러올 때는 bin2 로 가서 모델 가져오기\n",
+    "#model_xml = './bin2/mobilenetv2.xml'\n",
+    "#model_bin = './bin2/mobilenetv2.bin'"
    ]
   },
   {
